--- a/naunet/templates/cvode/include/naunet_ode.h.j2
+++ b/naunet/templates/cvode/include/naunet_ode.h.j2
@@ -22,7 +22,7 @@
 #define IJth(A,i,j) SM_ELEMENT_D(A,i,j)
 
 {% if info.device == "gpu" -%}
-__device__ __host__
+__device__
 {% endif -%}
 int calculate_rates(realtype *k, realtype *y, UserData *user_data);
 int fex(realtype t, N_Vector u, N_Vector u_dot, void *user_data);
