--- a/naunet/templates/cvode/src/naunet_constants.cpp.j2
+++ b/naunet/templates/cvode/src/naunet_constants.cpp.j2
@@ -29,7 +29,7 @@ __constant__ double echarge         = 4.80320425e-10;
 // Boltzmann constant (erg/K)
 __constant__ double kerg            = 1.380658e-16;
 
-{% for c in variables.consts.items() %}
+{% for c, cv in variables.consts.items() %}
 __constant__ double {{ c }} = {{ cv }};
 {% endfor %}
 
@@ -65,3 +65,19 @@ const double {{ c }} = {{ cv }};
 {% endfor %}
 
 {% endif %}
+
+{% with device = info.device %}
+
+{% if physics.h2shielding == "L96Table" %}
+{% include "data/H2shielding.dat.j2" %}
+{% endif %}
+
+{% if physics.coshielding == "V09Table" %}
+{% include "data/COshielding_11.2bH2_5e20nH.dat.j2" %}
+{% endif %}
+
+{% if physics.n2shielding == "L13Table" %}
+{% include "data/N2shielding_11.2bH2_1e20nH.dat.j2" %}
+{% endif %}
+
+{% endwith %}
