--- a/naunet/templates/odeint/include/naunet_physics.h.j2
+++ b/naunet/templates/odeint/include/naunet_physics.h.j2
@@ -5,4 +5,18 @@
 
 double mantles(double *y);
 
+double shieldingfactor(int specidx, double h2coldens, double spcoldens, double tgas, int method);
+
+double H2shielding(double coldens, int method);
+
+double COshielding(double tgas, double h2col, double coldens, int method);
+
+double N2shielding(double tgas, double h2col, double coldens, int method);
+
+double H2shieldingInt(double coldens);
+
+double COshieldingInt(double tgas, double h2col, double coldens);
+
+double N2shieldingInt(double tgas, double h2col, double coldens);
+
 #endif
