--- a/naunet/templates/cvode/src/naunet_physics.cpp.j2
+++ b/naunet/templates/cvode/src/naunet_physics.cpp.j2
@@ -49,7 +49,9 @@ double H2shielding(double coldens, int method)
     {
         case 0:
             shielding = H2shieldingInt(coldens);
+            break;
         default:
+            break;
     }
     return shielding;
 }
@@ -66,6 +68,7 @@ double COshielding(double tgas, double h2col, double coldens, int method)
             shielding = COshieldingInt(tgas, h2col, coldens);
             break;
         default:
+            break;
     }
     return shielding;
 }
@@ -82,6 +85,7 @@ double N2shielding(double tgas, double h2col, double coldens, int method)
             shielding = N2shieldingInt(tgas, h2col, coldens);
             break;
         default:
+            break;
     }
     return shielding;
 }
