--- a/naunet/templates/odeint/src/CMakeLists.txt.j2
+++ b/naunet/templates/odeint/src/CMakeLists.txt.j2
@@ -54,6 +54,7 @@ foreach(_libtype ${_libtypes})
         target_include_directories(naunet PRIVATE ${Boost_INCLUDE_DIRS})
         target_link_libraries(${lib_target} ${compiled_target})
         set(compiled_target "${compiled_target};${lib_target}")
+        set_target_properties(${lib_target} PROPERTIES OUTPUT_NAME ${name})
     endforeach()
     {% endif -%}
 
@@ -64,6 +65,7 @@ foreach(_libtype ${_libtypes})
         target_include_directories(naunet PRIVATE ${Boost_INCLUDE_DIRS})
         target_link_libraries(${lib_target} ${compiled_target})
         set(compiled_target "${compiled_target};${lib_target}")
+        set_target_properties(${lib_target} PROPERTIES OUTPUT_NAME ${name})
     endforeach()
 
 endforeach()
