--- a/naunet/templates/cvode/include/naunet_userdata.h.j2
+++ b/naunet/templates/cvode/include/naunet_userdata.h.j2
@@ -4,7 +4,7 @@
 // Struct for holding the nessesary additional variables for the problem.
 typedef struct
 {
-    {% for v in variables.vars -%}
+    {% for v in variables.varis -%}
         double {{ v }};
     {% endfor %}
 
