--- a/naunet/templates/cvode/src/naunet_ode.cpp.j2
+++ b/naunet/templates/cvode/src/naunet_ode.cpp.j2
@@ -26,7 +26,7 @@ __device__
 int calculate_rates(realtype *k, realtype *y, UserData *u_data)
 {
 
-    {% for v in variables.vars -%}
+    {% for v in variables.varis -%}
         realtype {{ v }} = u_data->{{ v }};
     {% endfor %}
 
@@ -64,7 +64,7 @@ int fex(realtype t, N_Vector u, N_Vector u_dot, void *user_data)
     realtype *y      = N_VGetArrayPointer(u);
     realtype *ydot   = N_VGetArrayPointer(u_dot);
     UserData *u_data = (UserData*) user_data;
-    {% for v in variables.vars -%}
+    {% for v in variables.varis -%}
         realtype {{ v }} = u_data->{{ v }};
     {% endfor %}
 
@@ -127,7 +127,7 @@ int jtv(N_Vector v, N_Vector Jv, realtype t, N_Vector u, N_Vector fu,
     realtype *fx     = N_VGetArrayPointer(fu);
 
     UserData *u_data = (UserData*) user_data;
-    {% for v in variables.vars -%}
+    {% for v in variables.varis -%}
         realtype {{ v }} = u_data->{{ v }};
     {% endfor %}
 
@@ -157,7 +157,7 @@ int jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix,
     {% if info.method == "dense" -%}
     realtype *y = N_VGetArrayPointer(u);
     UserData *u_data = (UserData*) user_data;
-    {% for v in variables.vars -%}
+    {% for v in variables.varis -%}
         realtype {{ v }} = u_data->{{ v }};
     {% endfor %}
 
@@ -255,7 +255,7 @@ __global__ void f_kernel(realtype *y, realtype *ydot, UserData *d_udata, int nsy
     int tidx = blockIdx.x*blockDim.x + threadIdx.x;
     int gs   = blockDim.x * gridDim.x;
 
-    {% for v in variables.vars -%}
+    {% for v in variables.varis -%}
         realtype {{ v }} = d_udata->{{ v }};
     {% endfor %}
 
