--- a/naunet/templates/odeint/src/naunet_ode.cpp.j2
+++ b/naunet/templates/odeint/src/naunet_ode.cpp.j2
@@ -18,7 +18,7 @@ typedef boost::numeric::ublas::matrix< double > matrix_type;
 int calculate_rates(double *k, double *y, UserData *u_data)
 {
 
-    {% for v in variables.vars -%}
+    {% for v in variables.varis -%}
         double {{ v }} = u_data->{{ v }};
     {% endfor %}
 
@@ -62,7 +62,7 @@ fex::~fex()
 void fex::operator()(const vector_type &y, vector_type &ydot, double t)
 {
 
-    {% for v in variables.vars -%}
+    {% for v in variables.varis -%}
         double {{ v }} = u_data->{{ v }};
     {% endfor %}
 
@@ -107,7 +107,7 @@ jac::~jac()
 void jac::operator()(const vector_type &y, matrix_type &j, const double &t, vector_type &dfdt)
 {
 
-    {% for v in variables.vars -%}
+    {% for v in variables.varis -%}
         double {{ v }} = u_data->{{ v }};
     {% endfor %}
 
