--- a/naunet/templates/patches/enzo/Grid_NaunetWrapper.C.j2
+++ b/naunet/templates/patches/enzo/Grid_NaunetWrapper.C.j2
@@ -196,7 +196,7 @@ int grid::NaunetWrapper()
   Naunet naunet;
   naunet.initSolver();
 
-  UserData data;
+  NaunetData data;
   float y[NAUNET_NSPECIES];
 
   float NumberDensityUnits = DensityUnits / mh;
