--- a/naunet/templates/patches/enzo/naunet_enzo.h.j2
+++ b/naunet/templates/patches/enzo/naunet_enzo.h.j2
@@ -2,7 +2,7 @@
 #define __NAUNET_ENZO_H__
 
 #include "naunet.h"
-#include "naunet_userdata.h"
+#include "naunet_data.h"
 
 #define NAUNET_SPECIES 4
 // number of equations to be solved
