--- a/naunet/templates/cvode/include/naunet.h.j2
+++ b/naunet/templates/cvode/include/naunet.h.j2
@@ -22,7 +22,7 @@
 #include <sundials/sundials_types.h>    // defs. of realtype, sunindextype
 #include <sundials/sundials_math.h>     // contains the macros ABS, SUNSQR, EXP
 
-#include "naunet_userdata.h"
+#include "naunet_data.h"
 #include "naunet_ode.h"
 #include "naunet_macros.h"
 {% endif %}
@@ -32,7 +32,7 @@ class Naunet
 {
 
 private:
-    // UserData *m_data;
+    // NaunetData *m_data;
     N_Vector m_y;
     SUNMatrix m_a;
 
@@ -53,7 +53,7 @@ public:
     {% if info.method == "cusparse" -%}
     int resetSolver(int nsystem);
     {% endif -%}
-    int solve(realtype *ab, realtype dt, UserData *data);
+    int solve(realtype *ab, realtype dt, NaunetData *data);
 };
 
 #endif
