--- a/naunet/templates/cvode/include/naunet_ode.h.j2
+++ b/naunet/templates/cvode/include/naunet_ode.h.j2
@@ -17,14 +17,14 @@
 #include "naunet_constants.h"
 #include "naunet_macros.h"
 #include "naunet_physics.h"
-#include "naunet_userdata.h"
+#include "naunet_data.h"
 
 #define IJth(A,i,j) SM_ELEMENT_D(A,i,j)
 
 {% if info.device == "gpu" -%}
 __device__
 {% endif -%}
-int calculate_rates(realtype *k, realtype *y, UserData *user_data);
+int calculate_rates(realtype *k, realtype *y, NaunetData *user_data);
 int fex(realtype t, N_Vector u, N_Vector u_dot, void *user_data);
 int jtv(N_Vector v, N_Vector Jv, realtype t, N_Vector u, N_Vector fu, 
         void *user_data, N_Vector tmp);
@@ -33,8 +33,8 @@ int jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix,
 
 {% if info.method == "cusparse" -%}
 int jacInit(SUNMatrix jmatrix);
-__global__ void f_kernel(realtype *y, realtype *ydot, UserData *udata, int nsystem);
-__global__ void j_kernel(realtype *y, realtype *jdata, UserData *udata, int nsystem);
+__global__ void f_kernel(realtype *y, realtype *ydot, NaunetData *udata, int nsystem);
+__global__ void j_kernel(realtype *y, realtype *jdata, NaunetData *udata, int nsystem);
 
 {% endif -%}
 
