--- a/naunet/templates/cvode/src/naunet_ode.cpp.j2
+++ b/naunet/templates/cvode/src/naunet_ode.cpp.j2
@@ -17,13 +17,13 @@
 #include "naunet_constants.h"
 #include "naunet_macros.h"
 #include "naunet_physics.h"
-#include "naunet_userdata.h"
+#include "naunet_data.h"
 {% endif %}
 
 {% if info.device == "gpu" -%}
 __device__
 {% endif -%}
-int calculate_rates(realtype *k, realtype *y, UserData *u_data)
+int calculate_rates(realtype *k, realtype *y, NaunetData *u_data)
 {
 
     {% for v in variables.varis -%}
@@ -63,7 +63,7 @@ int fex(realtype t, N_Vector u, N_Vector u_dot, void *user_data)
     {% if info.method == "dense" or info.method == "sparse" -%}
     realtype *y      = N_VGetArrayPointer(u);
     realtype *ydot   = N_VGetArrayPointer(u_dot);
-    UserData *u_data = (UserData*) user_data;
+    NaunetData *u_data = (NaunetData*) user_data;
     {% for v in variables.varis -%}
         realtype {{ v }} = u_data->{{ v }};
     {% endfor %}
@@ -83,8 +83,8 @@ int fex(realtype t, N_Vector u, N_Vector u_dot, void *user_data)
 
     realtype *y     = N_VGetDeviceArrayPointer_Cuda(u);
     realtype *ydot  = N_VGetDeviceArrayPointer_Cuda(u_dot);
-    UserData *h_udata = (UserData*) user_data;
-    UserData *d_udata;
+    NaunetData *h_udata = (NaunetData*) user_data;
+    NaunetData *d_udata;
 
     // check the size of system (number of cells/ a batch)
     sunindextype lrw, liw;
@@ -92,8 +92,8 @@ int fex(realtype t, N_Vector u, N_Vector u_dot, void *user_data)
     int nsystem = lrw / NSPECIES;
 
     // copy the user data for each system/cell
-    cudaMalloc((void**)&d_udata, sizeof(UserData) * nsystem);
-    cudaMemcpy(d_udata, h_udata, sizeof(UserData) * nsystem, cudaMemcpyHostToDevice);
+    cudaMalloc((void**)&d_udata, sizeof(NaunetData) * nsystem);
+    cudaMemcpy(d_udata, h_udata, sizeof(NaunetData) * nsystem, cudaMemcpyHostToDevice);
     cudaDeviceSynchronize();    
 
     unsigned block_size = min(BLOCKSIZE, nsystem);
@@ -126,7 +126,7 @@ int jtv(N_Vector v, N_Vector Jv, realtype t, N_Vector u, N_Vector fu,
     realtype *ydot   = N_VGetArrayPointer(Jv);
     realtype *fx     = N_VGetArrayPointer(fu);
 
-    UserData *u_data = (UserData*) user_data;
+    NaunetData *u_data = (NaunetData*) user_data;
     {% for v in variables.varis -%}
         realtype {{ v }} = u_data->{{ v }};
     {% endfor %}
@@ -156,7 +156,7 @@ int jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix,
 {
     {% if info.method == "dense" -%}
     realtype *y = N_VGetArrayPointer(u);
-    UserData *u_data = (UserData*) user_data;
+    NaunetData *u_data = (NaunetData*) user_data;
     {% for v in variables.varis -%}
         realtype {{ v }} = u_data->{{ v }};
     {% endfor %}
@@ -173,7 +173,7 @@ int jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix,
     sunindextype *rowptrs = SUNSparseMatrix_IndexPointers(jmatrix);
     sunindextype *colvals = SUNSparseMatrix_IndexValues(jmatrix);
     realtype *data = SUNSparseMatrix_Data(jmatrix);
-    UserData *u_data = (UserData*) user_data;
+    NaunetData *u_data = (NaunetData*) user_data;
 
     realtype k[NREACTIONS] = {0.0};
     calculate_rates(k, y, u_data);
@@ -194,15 +194,15 @@ int jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix,
     {% endfor %}
 
     {% elif info.method == "cusparse" -%}
-    realtype *y       = N_VGetDeviceArrayPointer_Cuda(u);
-    realtype *data    = SUNMatrix_cuSparse_Data(jmatrix);
-    UserData *h_udata = (UserData*) user_data;
-    UserData *d_udata;
+    realtype *y         = N_VGetDeviceArrayPointer_Cuda(u);
+    realtype *data      = SUNMatrix_cuSparse_Data(jmatrix);
+    NaunetData *h_udata = (NaunetData*) user_data;
+    NaunetData *d_udata;
 
     int nsystem = SUNMatrix_cuSparse_NumBlocks(jmatrix);
 
-    cudaMalloc((void**)&d_udata, sizeof(UserData) * nsystem);
-    cudaMemcpy(d_udata, h_udata, sizeof(UserData) * nsystem, cudaMemcpyHostToDevice);
+    cudaMalloc((void**)&d_udata, sizeof(NaunetData) * nsystem);
+    cudaMemcpy(d_udata, h_udata, sizeof(NaunetData) * nsystem, cudaMemcpyHostToDevice);
     cudaDeviceSynchronize();
 
     unsigned block_size = min(BLOCKSIZE, nsystem);
@@ -250,7 +250,7 @@ int jacInit(SUNMatrix jmatrix)
     return CV_SUCCESS;
 }
 
-__global__ void f_kernel(realtype *y, realtype *ydot, UserData *d_udata, int nsystem)
+__global__ void f_kernel(realtype *y, realtype *ydot, NaunetData *d_udata, int nsystem)
 {
     int tidx = blockIdx.x*blockDim.x + threadIdx.x;
     int gs   = blockDim.x * gridDim.x;
@@ -265,7 +265,7 @@ __global__ void f_kernel(realtype *y, realtype *ydot, UserData *d_udata, int nsy
         int yistart = cur * NSPECIES;
         realtype *y_cur = y + yistart;
         realtype k[NREACTIONS] = {0.0};
-        UserData *udata = &d_udata[cur];
+        NaunetData *udata = &d_udata[cur];
 
         calculate_rates(k, y_cur, udata);
 
@@ -280,7 +280,7 @@ __global__ void f_kernel(realtype *y, realtype *ydot, UserData *d_udata, int nsy
 
 }
 
-__global__ void j_kernel(realtype *y, realtype *data, UserData *d_udata, int nsystem)
+__global__ void j_kernel(realtype *y, realtype *data, NaunetData *d_udata, int nsystem)
 {
     int tidx = blockIdx.x*blockDim.x + threadIdx.x;
     int gs   = blockDim.x * gridDim.x;
@@ -292,7 +292,7 @@ __global__ void j_kernel(realtype *y, realtype *data, UserData *d_udata, int nsy
         int jistart = cur * NNZ;
         realtype *y_cur = y + yistart;
         realtype k[NREACTIONS] = {0.0};
-        UserData *udata = &d_udata[cur];
+        NaunetData *udata = &d_udata[cur];
 
         calculate_rates(k, y_cur, udata);
 
