--- a/naunet/templates/odeint/include/naunet_data.h.j2
+++ b/naunet/templates/odeint/include/naunet_data.h.j2
@@ -1,5 +1,5 @@
-#ifndef __NAUNET_USERDATA_H__
-#define __NAUNET_USERDATA_H__
+#ifndef __NAUNET_DATA_H__
+#define __NAUNET_DATA_H__
 
 // Struct for holding the nessesary additional variables for the problem.
 typedef struct
@@ -8,6 +8,6 @@ typedef struct
         double {{ v }};
     {% endfor %}
 
-} UserData;
+} NaunetData;
 
 #endif
